# aetos

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
docs/md/: agentic_energy_executable_prd.md  autonomous_energy_prd.md  real_data_dataset_design.md
docs/talentlab/: design.md  poc.md  problem.md  scenario.md  summary.md  test.md
src/aetos/: __init__.py  config.py  deep_agent.py  loop.py  observability.py  reward.py  runtime.py  security.py  state.py  workflow.py
src/aetos/a2a/: __init__.py  agents.py  protocol.py  runtime.py
src/aetos/agents/: __init__.py  base.py  critic.py  optimizer.py  strategy.py
src/aetos/api/: app.py
src/aetos/api/static/: index.html
src/aetos/db/: __init__.py  history.py  import_real_pkl.py  models.py  models_dataset.py  session.py
src/aetos/execution/: __init__.py  dispatch.py
src/aetos/mcp/: server.py
src/aetos/memory/: __init__.py  vector_store.py
src/aetos/negotiation/: __init__.py  cda.py
tests/: __init__.py  conftest.py  factories.py  real_pkl_loader.py  test_api_chat.py  test_deep_agent.py  test_history.py  test_mcp.py  test_real_pkl_db_compat.py  test_scenarios.py  test_vector_store.py  test_workflow.py
tests/data/: scenarios.json  strategies.json
